Replaced Reflections with custom implementation closes #3